fix overflow

--- a/src/components/Web/Footer/Footer.scss
+++ b/src/components/Web/Footer/Footer.scss
@@ -5,7 +5,7 @@
 .footer{
   display: block;
   position: relative;
-  width: 100vw;  
+  width: 100%;  
   background: rgba(40,167,69,1);
   background: -moz-linear-gradient(top, rgba(40,167,69,1) 0%, rgba(20,86,73,1) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(40,167,69,1)), color-stop(100%, rgba(20,86,73,1)));
