--- a/src/components/Web/Header/Header.scss
+++ b/src/components/Web/Header/Header.scss
@@ -160,9 +160,9 @@
         top: 3vw;
         left: 0;
         z-index: 1;
-        width: 100vw;
+        width: 100%;
         &__img {
-          width: 100vw;
+          width: 100%;
           height: auto;
         }
       }
