--- a/src/components/Web/RegisterSection/RegisterSection.scss
+++ b/src/components/Web/RegisterSection/RegisterSection.scss
@@ -10,7 +10,7 @@
     position: relative;
     top: -7vw;
     left: 0;
-    width: 100vw;
+    width: 100%;
     &--img{
       width: 100%;
       height: auto;
